# green-blue

./: .gitignore  CMakeLists.txt  README.md  blue-server.c  captain-balancer.c  client.c  green-blue.c  green-client.c  meta.h  peer.c  server-blue.c  server.c
utils/: arg-parser.c  arg_parser.h  blue.c  blue.h  initialize.c  initialize.h  meta.h  server-blue.c  server-blue.h  socket-object.c  socket-object.h  utils.c  utils.h
